Prevent layout scrollbar shift.

--- a/src/styles/organisms/main-menu.scss
+++ b/src/styles/organisms/main-menu.scss
@@ -54,6 +54,7 @@
 
     @media screen and (min-width: 1280px) {
       border-radius: 14px 14px 0 0;
+      margin-left: auto;
     }
 
     a {
@@ -83,25 +84,5 @@
         text-underline-offset: 5px;
       }
     }
-
-    // &:before,
-    // &:after {
-    //   content: '';
-    //   position: absolute;
-    //   width: 100%;
-    //   height: calc(100% + 1px); // accommodate border.
-    //   background: var(--color-haze);
-    //   border-bottom: var(--border-hazedark-1);
-    // }
-
-    // &:before {
-    //   top: 0;
-    //   left: -100%;
-    // }
-    
-    // &:after {
-    //   top: 0;
-    //   left: 100%;
-    // }
   }
 }
